/* User Interaction */ {{Yes}} template instead html coding.

--- a/Distributions.mw
+++ b/Distributions.mw
@@ -121,11 +121,11 @@ Debian Linux, the whole distribution, on a mobile phone.
 {| border=1 width=100% |
 | width=14%| || width=14%|2007.2 || width=14%|FSO || width=14%|Om2008.8 || width=14%|SHR || width=14%|Qtopia || Debian
 |-
-| Stylus friendly || style="background:lightgreen;" | Yes || style="background:lightgreen;" | Yes || style="background:lightgreen;" | Yes || N/A || style="background:lightgreen;" | Yes || style="background:lightgreen;" | Yes
+| Stylus friendly || {{Yes}} || {{Yes}} || {{Yes}} || N/A || {{Yes}} || {{Yes}}
 |-
-| Finger friendly || Partially || Partially || Partially || N/A || style="background:lightgreen;" | Yes || No
+| Finger friendly || Partially || Partially || Partially || N/A || {{Yes}} || {{No}}
 |-
-| Accelerometer || No || No || style="background:lightgreen;" | Yes[[Gestures|(1)]]  || N/A || No || No
+| Accelerometer || {{No}}|| {{No}} || {{Yes}} [[Gestures|(1)]]  || N/A || {{No}} || {{No}}
 |-
 |}
 
