--- a/Toolchain.mw
+++ b/Toolchain.mw
@@ -84,8 +84,9 @@ to start "sh" or "bash" first.
 
  . /usr/local/openmoko/arm/setup-env
 
-* At least, you should add /usr/local/openmoko/arm/bin to your $PATH variable, otherwise the next steps won't work (om-conf and make).
-
+* At least, you should add /usr/local/openmoko/arm/bin to your $PATH variable, otherwise the next steps won't work (om-conf and make). 
+ export PATH=$PATH:/usr/local/openmoko/arm/bin 
+Note: This is will only last for your current session. Add it to your shell startup scripts to make it permenant (~/.bashrc for instance).
 
 ==Building a sample project==
 
