/* Applications */ {{Yes}} template instead HTML coding.

--- a/Distributions.mw
+++ b/Distributions.mw
@@ -134,21 +134,21 @@ Debian Linux, the whole distribution, on a mobile phone.
 {| border=1 width=100% |
 | width=14%| || width=14%|2007.2 || width=14%|FSO || width=14%|Om2008.8 || width=14%|SHR || width=14%|Qtopia || Debian
 |-
-| Terminal || Basic (2) || style="background:lightgreen;" | Yes || style="background:lightgreen;" | Yes (1) || N/A || style="background:lightgreen;" | Yes || style="background:lightgreen;" | Yes
+| Terminal || Basic (2) || {{Yes}} || {{Yes}} (1) || N/A || {{Yes}} || {{Yes}}
 |-
-| PIM || style="background:lightgreen;" | Yes || No || style="background:lightgreen;" | Yes || N/A || style="background:lightgreen;" | Yes || style="background:lightgreen;" | Yes (1)
+| PIM || {{Yes}} || {{No}} || {{Yes}} || N/A || {{Yes}} || {{Yes}} (1)
 |-
-| Phonebook || style="background:lightgreen;" | Yes || style="background:lightgreen;" | Yes || style="background:lightgreen;" | Yes || N/A || style="background:lightgreen;" | Yes || style="background:lightgreen;" | Yes (1)
+| Phonebook || {{Yes}} || {{Yes}} || {{Yes}} || N/A || {{Yes}} || {{Yes}} (1)
 |-
-| Dialer || style="background:lightgreen;" | Yes || style="background:lightgreen;" | Yes || style="background:lightgreen;" | Yes || N/A || style="background:lightgreen;" | Yes || style="background:lightgreen;" | Yes (1)
+| Dialer || {{Yes}} || {{Yes}} || {{Yes}} || N/A || {{Yes}} || {{Yes}} (1)
 |-
-| Web Browser || style="background:lightgreen;" | Yes (1) || ? || style="background:lightgreen;" | Yes (1) || ? || No || style="background:lightgreen;" | Yes (1)
+| Web Browser || {{Yes}} (1) || ? || {{Yes}} (1) || ? || {{No}} || {{Yes}} (1)
 |-
-| Mail Client || ? || ? || style="background:lightgreen;" | Yes || ? || style="background:lightgreen;" | Yes || style="background:lightgreen;" | Yes (1)
+| Mail Client || ? || ? || {{Yes}} || ? || {{Yes}} || {{Yes}} (1)
 |-
-| XMPP Client || style="background:lightgreen;" | Yes (1) || ? || style="background:lightgreen;" | Yes [[IM#Implementation_Recommendations|(1)]] || ? || No || style="background:lightgreen;" | Yes (1)
+| XMPP Client || {{Yes}} (1) || ? || {{Yes}} [[IM#Implementation_Recommendations|(1)]] || ? || {{No}} || {{Yes}} (1)
 |-
-| Media Player || style="background:lightgreen;" | Yes || ? || style="background:lightgreen;" | Yes(1) || ? || style="background:lightgreen;" | Yes || style="background:lightgreen;" | Yes (1) 
+| Media Player || {{Yes}} || ? || {{Yes}} (1) || ? || {{Yes}} || {{Yes}} (1) 
 |-
 |}
 
