/* Toolkits / Runtimes */ {{Yes}} template instead HTML coding.

--- a/Distributions.mw
+++ b/Distributions.mw
@@ -156,17 +156,17 @@ Debian Linux, the whole distribution, on a mobile phone.
 {| border=1 width=100% |
 | width=14%| || width=14%|2007.2 || width=14%|FSO || width=14%|Om2008.8 || width=14%|SHR || width=14%|Qtopia || Debian
 |-
-| GTK+ || style="background:lightgreen;" | Yes || style="background:lightgreen;" | Yes || style="background:lightgreen;" | Yes || style="background:lightgreen;" | Yes || No || style="background:lightgreen;" | Yes
+| GTK+ || {{Yes}} || {{Yes}} || {{Yes}} || {{Yes}} || {{No}} || {{Yes}}
 |-
-| QT/Qtopia || No || style="background:lightgreen;" | Yes? || style="background:lightgreen;" | Yes || style="background:lightgreen;" | Yes? || style="background:lightgreen;" | Yes || style="background:lightgreen;" | Yes
+| QT/Qtopia || No || {{Yes}}? || {{Yes}} || {{Yes}}? || {{Yes}} || {{Yes}}
 |-
 | Middleware || gsmd/neod || freesmartphone.org || qtopia-x11 || freesmartphone.org || qtopia || freesmartphone.org
 |-
-| [[Java]] || Jalimo || Jalimo || Jalimo || ? || ? || No
+| [[Java]] || Jalimo || Jalimo || Jalimo || ? || ? || {{No}}
 |-
-| [[Python]] || style="background:lightgreen;" | Yes || style="background:lightgreen;" | Yes || style="background:lightgreen;" | Yes || ? || style="background:lightgreen;" | Yes || style="background:lightgreen;" | Yes
+| [[Python]] || {{Yes}} || {{Yes}} || {{Yes}} || ? || {{Yes}} || {{Yes}}
 |-
-| [[Mono]] || style="background:lightgreen;" | Yes(1) || ? || style="background:lightgreen;" | Yes(1) || ? || ? || style="background:lightgreen;" | Yes(1) 
+| [[Mono]] || {{Yes}} (1) || ? || {{Yes}} (1) || ? || ? || {{Yes}} (1) 
 |}
 
 
