Link fix to comunity apps and emhasis on page purpose.

--- a/Applications.mw
+++ b/Applications.mw
@@ -1,9 +1,9 @@
 == Overview ==
-This page describes the set of applications being developed by the core set of Openmoko developers.
+This page describes the set of applications being '''developed by the core set of Openmoko developers'''.
 
 This is what is intended to be eventually released on the stock firmware of Openmoko phones (Neo1973 and successors).  If the community develops an application of suitable usefulness and quality, it may also be included on stock firmware.   
 
-Community applications may be found on the [[Wish_List|Wish List]] and on [http://projects.openmoko.org projects.openmoko.org]
+Community applications may be found on the [[Openmoko Community Applications]] and on [http://projects.openmoko.org projects.openmoko.org].
 
 Although Openmoko is designed for smartphones that use a stylus, it would be foolish to expect people to only operate their handsets with stylus. For this reason, some core phone-related applications will be developed with finger (as opposed to stylus navigation) in mind.
 
@@ -22,10 +22,6 @@ see [[Om 2007.1 apps]]
 ==== GPS Applications ====
 For a list of applications that use the GPS: <br>
 see [[GPS Applications]]
-
-=== Community Applications ===
-For a list of all applications developed from the community: <br>
-see [[Openmoko Community Applications]]
 
 == General Principles ==
 
