/* ASU software image */ Title was multiline, didn't work.

--- a/FAQ.mw
+++ b/FAQ.mw
@@ -158,8 +158,7 @@ A: A list of examples of "closed" behaviour has been started here - [[Problems o
 
 === ASU software image ===
 
-==== Why are the buttons in TangoGPS too large? The zoom out is missing!
-TangoGPS was fine in 2007.2! ====
+==== Why are the buttons in TangoGPS too large? The zoom out is missing! ====
 
 :There is no GTK engine or theme installed with the ASU build.  Fortunately, this is easy to fix!
 
@@ -177,8 +176,6 @@ TangoGPS was fine in 2007.2! ====
 :<tt>gtk-icon-theme-name="openmoko-standard"</tt>
 
 :You shouldn't even need to restart the device, although you will need to restart any GTK-based programs.
-
-
 
 ==Software==
 
