Broken link fixed.

--- a/Getting_Started_with_your_Neo_FreeRunner.mw
+++ b/Getting_Started_with_your_Neo_FreeRunner.mw
@@ -6,7 +6,7 @@
 Thank you for purchasing this Developer release of Neo FreeRunner. The [[Neo FreeRunner]] phone is the second hardware platform to take advantage of Openmoko. This guide will help you get to know your Neo FreeRunner and how to start using your Neo FreeRunner.</p>
 
 <p align="left">
-Some Frequently Asked Questions for new owners are featured in the [[Getting Started FAQ]].
+Some Frequently Asked Questions for new owners are featured in the [[FAQ#Getting_Started_with_your_Neo_FreeRunner]].
 </p>
 
 ! style="background:#fcfcfc; width:25% " |
