Broken link fixed.

--- a/Main_Page%2Ffr.mw
+++ b/Main_Page%2Ffr.mw
@@ -54,8 +54,7 @@ Par ailleurs, nous avons annoncé la diffusion des spécifications de nos produi
 <td>
 ===<font color=white>Où commencer ?</font>===
 * [[Getting Started with your Neo FreeRunner/fr|Guide de démarrage du Neo FreeRunner]]
-* [[Getting Started FAQ|FAQ sur le guide de démarrage]]
-
+* [[FAQ#Getting_Started_with_your_Neo_FreeRunner]]
 
 ===<font color=white>Logiciel</font>===
 * [[Distributions|Distributions logicielles Openmoko]]
