Broken link fixed.

--- a/Main_Page%2Fes.mw
+++ b/Main_Page%2Fes.mw
@@ -47,7 +47,7 @@ El sistema operativo Openmoko, que incluye un servidor X completo, permite a los
 <td>
 ===<font color=white>Empezando</font>===
 * [[Getting Started with your Neo FreeRunner/es | Guía Empezando con el Neo FreeRunner]]
-* [[Getting Started FAQ|Empezando FAQ]]
+* [[FAQ#Getting_Started_with_your_Neo_FreeRunner]]
 
 ===<font color=white>Software</font>===
 * [[Distributions|Distribuciones Openmoko]]
