Broken link fixed.

--- a/Manuals%2FNeo_FreeRunner%2Fru.mw
+++ b/Manuals%2FNeo_FreeRunner%2Fru.mw
@@ -387,7 +387,7 @@ R: Это может быть исправлено изменением файл
 * [[Neo FreeRunner GTA02 Hardware]]. Подробные характеристики.
 * [[GTA02 Openness/ru|Открытость GTA02]]. Конечные характеристики уровня микросхем, проспекты и документация на оборудование.
 * [[Distributions]]. Сильные и слабые стороны различных дистрибутивов для Neo.
-* [[Getting Started FAQ]]. Ответы.
+* [[FAQ#Getting_Started_with_your_Neo_FreeRunner]]. Ответы.
 * [[GTA02_FAQ]]. Ешё ответы
 
 Для поиска на этой wiki с помощью Google, используйте следующий поисковый запрос:
