Broken link fixed.

--- a/Getting_Started_with_your_Neo_FreeRunner%2Fes.mw
+++ b/Getting_Started_with_your_Neo_FreeRunner%2Fes.mw
@@ -7,7 +7,7 @@
 Gracias por comprar esta versión de desarrollo del Neo FreeRunner. El teléfono [[Neo FreeRunner]] es la segunda plataforma de hardware pensada para Openmoko. Esta guía te ayudará a conocer tu Neo Freerunner y como empezar a utilizar tu Neo FreeRunner.</p>
 
 <p align="left">
-Algunas de las Preguntas Mas Frecuentes para nuevos propietarios están contestadas en [[Getting Started FAQ]].
+Algunas de las Preguntas Mas Frecuentes para nuevos propietarios están contestadas en [[FAQ#Getting_Started_with_your_Neo_FreeRunner]].
 </p>
 
 ! style="background:#fcfcfc; width:25% " |
