Broken link fixed.

--- a/Getting_Started_with_your_Neo_FreeRunner.mw
+++ b/Getting_Started_with_your_Neo_FreeRunner.mw
@@ -424,7 +424,7 @@ The links on the top-right of this page lead to the sister sites in the Openmoko
 * [[Neo FreeRunner GTA02 Hardware]]. The detailed specifications.
 * [[GTA02 Openness]]. Ultimate chip-level specifications, data sheets and hardware documentation.
 * [[Distributions]]. Strengths and weaknesses of the various distributions available for the Neo.
-* [[Getting Started FAQ]]. Answers.
+* [[FAQ#Getting_Started_with_your_Neo_FreeRunner]]. Answers.
 * [[GTA02_FAQ]]. More answers
 
 To search this wiki with Google, use the following search term:
