--- a/Getting_Started_with_your_Neo_FreeRunner%2Fes.mw
+++ b/Getting_Started_with_your_Neo_FreeRunner%2Fes.mw
@@ -380,7 +380,7 @@ Los links en la parte superior derecha te llevan a las paginas hermanas de este 
 * [[Neo FreeRunner GTA02 Hardware]]. Las especificaciones en detalle.
 * [[GTA02 Openness]]. Especificaciones a nivel de chip, hojas de montaje y manuales de hardware disponibles.
 * [[Distributions|Distribuiciones]]. Fortalezas y puntos débiles de varias de las distribuciones disponibles para el Neo.
-* [[Getting Started FAQ|Empezando Preguntas mas Frecuentes]]. Respuestas.
+* [[FAQ#Getting_Started_with_your_Neo_FreeRunner|Empezando Preguntas mas Frecuentes]]. Respuestas.
 * [[GTA02_FAQ]]. Mas respuestas
 
 Para buscar en este wiki a través de Google, utiliza los siguiente terminos de busqueda:
