--- a/Openmoko_Local_Groups:_Munich.mw
+++ b/Openmoko_Local_Groups:_Munich.mw
@@ -191,6 +191,8 @@ Die Hardware Lösung sieht ziemlich einfach aus. Hätte auch das nötige Werkzeu
 
 [[Image:Gta02_gps_10pf_rework_sop.pdf]]
 
+--[[User:Datenwolf|Datenwolf]] 10:23, 31 August 2008 (UTC): Ich habe gestern endlich mein GTA02v6 erhalten. Beim Auspacken habe ich gleich die Lötstation vergewärmt und den 10pF-Kondensator bereitgelegt... Um dann festzustellen, dass beim v6 bereits ein 10pF eingelötet ist.
+
 --[[User:Peter b|Peter b]] 14:47, 18 July 2008 (UTC)
 
 [[User:Beni|Beni]] 13:21, 20 July 2008 (UTC) Cool, sieht wirklich nicht so schwer aus. Gott sei Dank :) Das mit der Verzögerung sollte sich damit verzögert haben, ich schätze stark, Pulster wird deswegen die Auslieferung nicht verzögern, weshalb wir uns alle auf kommende Woche freuen dürfen \o/
