/* Official Debian Port */

--- a/Manual_Debian.mw
+++ b/Manual_Debian.mw
@@ -339,7 +339,7 @@ Now you should be able to start tangogps from the X-mouse start menu:
 
 =Official Debian Port=
 
-An official Debian port based on the FSO image is being created. First information can be found at http://wiki.debian.org/pkg-fso. Early adopters are welcome.
+An official Debian port based on the FSO image is being created. First information can be found at http://wiki.debian.org/DebianOnFreeRunner. Early adopters are welcome.
 
 [[Category:Debian]]
 [[Category:Software (non openmoko)]]
