--- a/Debian.mw
+++ b/Debian.mw
@@ -1,5 +1,5 @@
 = Installation =
-There are official instructions on how to install Debian on http://wiki.debian.org/DebianOnFreeRunner, and the [http://lists.linuxtogo.org/pipermail/smartphones-standards/2008-August/000232.html announcement].
+There are "official" instructions on how to install Debian on http://wiki.debian.org/DebianOnFreeRunner, and the [http://lists.linuxtogo.org/pipermail/smartphones-standards/2008-August/000232.html announcement].
 
 Previous information (partly outdated, now) on how to install Debian manually has been moved to [[Manual Debian]].
 
