Broken link fixed.

--- a/Neo_FreeRunner%2Fnl.mw
+++ b/Neo_FreeRunner%2Fnl.mw
@@ -94,7 +94,7 @@ Openmoko brengt de Neo FreeRunner (GTA02), de volgende generatie Neo in het eers
 
 
 ==<font color=75d806>Openmoko community</font>==
-Iedereen kan meedoen met het Openmoko project, en meewerken aan de (open)producten.  Doe mee collaborate through any of the [[Development resources | project resources]], including this Openmoko Wiki. See the [[Help:Contents | wiki editing help]]page for information on making contributions to this wiki. 
+Iedereen kan meedoen met het Openmoko project, en meewerken aan de (open)producten.  Doe mee collaborate through any of the [[Development resources | project resources]], including this Openmoko Wiki. See the [[Edit Wiki| wiki editing help]]page for information on making contributions to this wiki. 
 
 You can start by using the [[introduction]] page, photos, videos and Openmoko Wiki Official Index Page. zoals altijd, de gewoonlijke [[FAQ | Frequently Asked Questions]] (FAQ) and [http://lists.openmoko.org/mailman/listinfo/| mailing list] pagina´s zijn handig. 
 
