--- a/Translation_HOWTO.mw
+++ b/Translation_HOWTO.mw
@@ -1,9 +1,49 @@
-Main page for localisation is [[Translation]]
-help to improve this page
-== Finding what to translate ==
-If you are not sure what page is most popular and reday for translation. Please refer to following list.
+{{Languages|Translation_HOWTO}}
 
-Plaese start at these pages. Or you can add the page you think is important.
+Main page for localization is [[Translation]]. This page contains some help on how to do Wiki text and Openmoko software translations.
+
+== Translating Openmoko Wiki ==
+
+Rule of thumb: It's better to have some translation than nothing, so feel free to translate.
+
+=== Translated article titles ===
+
+Please use the '''English''' title of the article. This will ensure that the language bar template can link to localized version of the article. For example: [[Main_Page]] and [[Main_Page/fr]].
+
+To create a new translation, simply add your language's code after the page name when viewing the English version and start editing in the appearing box.
+
+Always add the Languages template to the page, so that users can link back to other languages. For example this page starts with:
+
+<pre><nowiki>
+{{Languages|Translation_HOWTO}}
+</nowiki></pre>
+
+Translated articles should not be added to the English category. Please always use the language suffix for the category name too.
+
+=== Translated category names ===
+
+The category names must be '''English''', and append your language's code to the end. This will ensure that language bar will work and allow users to navigate between various languages. For example: [[:Category:Hardware]] and [[:Category:Hardware/fr]].
+
+If the category name becomes red in your article, that means there is no '''category page''' for this category yet in this lagnuage. (First make sure you don't have a typo in the name!) Please click that red category name, and create the category page for it, which contains the following:
+
+* Languages template, same as on the English version of the category
+* Parent categories, same as on the English version but with language suffixes
+
+For example:
+
+<pre><nowiki>
+{{Languages|:Category:Basic End User}}
+
+[[Category:Community/de]]
+</nowiki></pre>
+
+Of course you may want to translate the English description of this category too and add between these lines.
+
+=== Finding what to translate ===
+
+If you are not sure what page is most popular and ready for translation. Please refer to following list.
+
+Please start at these pages. Or you can add the page you think is important.
 
 {| class="wikitable sortable" style="margin: 0em " cellspacing="0" cellpadding="5" border="1"
 ! Page Name  !! Language Versions !!Maintainer!!Status
@@ -21,23 +61,26 @@ Plaese start at these pages. Or you can add the page you think is important.
 | [[Om2008.8]] ||none || none ||todo
 |}
 
-== Translating ==
-Rule of thumb: It's better to have some translation than nothing, so feel free to translate.
+== Translating Openmoko software ==
 
-== Software ==
-There are specialised tools for *.pot (*.po) files edition gtranslator, po4a, poedit, pootle, potool ... [http://translate.sourceforge.net/wiki/pootle/index Pootle] can host several projects and languages to coordinate translation activities, and allow online translation.
+There are specialized tools for *.pot (*.po) files edition gtranslator, po4a, poedit, pootle, potool ... [http://translate.sourceforge.net/wiki/pootle/index Pootle] can host several projects and languages to coordinate translation activities, and allow online translation.
 
 Most of text editors will fit also: vim, emacs, ed, gedit ...
 
-== Updating source tree ==
+=== Updating source tree ===
 {{todo|descript SVN update after editing}}
-== Notes ==
+
+=== Notes ===
 * Encoding for *.po is UTF-8
-* Most of packages in Openembedded tree allready iternationalised, its worth to review them
-== Common space for localisation effort ==
+* Most of packages in [[OpenEmbedded]] tree already internationalized, its worth to review them
+
+=== Common space for localization effort ===
+
 '''please join the community ml for now.''' there's also some talking about creating a translators ml [[Talk:Translation#Need for translation mailing list (and coordinators?)|here]] [http://lists.openmoko.org/pipermail/community/2007-April/004973.html and here: OM-i18n-ml] feel free to join both discussions. [[User:Cga|cga]] sat apr 28th 20:48:35 CEST 2007)
 
-== List of Openmoko related PO's==
+=== List of Openmoko related PO's===
+
 Most of apps in /home/moko/sources/svn/ and /home/moko/openmoko/trunk/src/target/OM-2007/applications/ don have *.pot files for now, but some of them have *.po files for some of the languages
 
-{{Languages|Translation_HOWTO}}
+
+[[Category:Wiki Editing]]
