/* Translating Openmoko Wiki */ format

--- a/Translation_HOWTO.mw
+++ b/Translation_HOWTO.mw
@@ -6,11 +6,7 @@ Main page for localization is [[Translation]]. This page contains some help on h
 
 Rule of thumb: It's better to have some translation than nothing, so feel free to translate.
 
-=== Translated article titles ===
-
-Please use the '''English''' title of the article. This will ensure that the language bar template can link to localized version of the article. For example: [[Main_Page]] and [[Main_Page/fr]].
-
-To create a new translation, simply add your language's code after the page name when viewing the English version and start editing in the appearing box.
+To create a new translation, simply click on your language's link when viewing the English version and start editing in the appearing box.
 
 Always add the Languages template to the page, so that users can link back to other languages. For example this page starts with:
 
@@ -20,16 +16,20 @@ Always add the Languages template to the page, so that users can link back to ot
 
 Translated articles should not be added to the English category. Please always use the language suffix for the category name too.
 
-=== Translated category names ===
+=== Article titles ===
 
-The category names must be '''English''', and append your language's code to the end. This will ensure that language bar will work and allow users to navigate between various languages. For example: [[:Category:Hardware]] and [[:Category:Hardware/fr]].
+Please use the '''English''' title of the article. This will ensure that the language bar template can link to localized version of the article. For example: [[Main_Page]] and [[Main_Page/fr]].
 
-If the category name becomes red in your article, that means there is no '''category page''' for this category yet in this lagnuage. (First make sure you don't have a typo in the name!) Please click that red category name, and create the category page for it, which contains the following:
+=== Category names and category pages ===
+
+The category names must be '''English'''. Append your language's code to the end. This will ensure that language bar will work and allow users to navigate between various languages of the category. For example: [[:Category:Hardware]] and [[:Category:Hardware/fr]].
+
+If the category name becomes red in your article, that means there is no '''category page''' for this category yet in this language. (First make sure you don't have a typo in the name!) Please click that red category name, and create the category page for it, which contains the following:
 
 * Languages template, same as on the English version of the category
 * Parent categories, same as on the English version but with language suffixes
 
-For example:
+For example on [[:Category:Basic End User]]:
 
 <pre><nowiki>
 {{Languages|:Category:Basic End User}}
