/* Distributions and installation */

--- a/Download.mw
+++ b/Download.mw
@@ -72,6 +72,11 @@ Daily builds: http://buildhost.openmoko.org/daily/neo1973/
 * Root FS files are like: Openmoko-'''openmoko-devel-image'''-glibc-ipk-P1-Snapshot-20080802-'''om-gta01.rootfs.jffs2'''
 * Kernel files are like: '''uImage'''-2.6.24+git27+1a95efdc23966343a3b432ceef2f6c24dc0e2052-r2-'''om-gta01.bin'''
 
+==== Celtune images ====
+
+* Celtune offers different Images and a huge amount of packages (2007.2, pyneo, fso) for neo1973, freerunner and others.
+* Celtune images can be found at http://rabenfrost.net/celtune/
+
 ==== ScaredyCat images ====
 
 These are usable images created by [http://blog.automated.it/category/openmoko/ Andy Powell] based on the 2007.2 software stack.
