/* Categories */ removed my structure test.

--- a/Wiki_Issues.mw
+++ b/Wiki_Issues.mw
@@ -120,6 +120,8 @@ Accepted and implemented requests should be deleted. Rejected requests should be
 * A taxonomy by maturity: "Wishlist", "Experimental", "Unstable", "Testing", "Stable".
 [[User:MinhHaDuong|MinhHaDuong]] 10:47, 24 August 2008 (UTC)
 
+See also: [[Category_talk:Categories]] 
+
 ===Lists now implemented as categories===
 
 Rejected. (Will remove this section soon.)
@@ -157,34 +159,9 @@ There are two templates, { { Wishlist } } and { { Unimplemented } } . Is that un
 
 === Category structure ===
 
-{{Editing|Kempelen|2008/08/29|Discovering category structure}}
-
-Names are votes. See also: Too general category names above.
-
-Top level categories.
-
-* [[:Category:Categories]] - container for top level categories.
-** [[:Category:Community]] - (OK: [[User:Kempelen|Kempelen]])
-** [[:Category:Documentation]] (Remove: [[User:Kempelen|Kempelen]])
-** [[:Category:Hardware]] - (OK: [[User:Kempelen|Kempelen]])
-** [[:Category:Information]] - (Remove: [[User:Kempelen|Kempelen]])
-** [[:Category:Openmoko]] - (Remove: [[User:Kempelen|Kempelen]])
-** [[:Category:Policy]] - Developer policies (OK: [[User:Kempelen|Kempelen]]) 
-** [[:Category:Software]] - (OK: [[User:Kempelen|Kempelen]])
-** [[:Category:Technical]] - (Remove: [[User:Kempelen|Kempelen]]) 
-** [[:Category:ToDo]] - The TODO template adds here (OK: [[User:Kempelen|Kempelen]])
-** [[:Category:User's Manual]] - Empty.
-
-Subcategories of Software. Looks well designed:
-
-* [[:Category:Software]] - Articles should not be added here directly.
-** [[:Category:Applications]] - (OK: [[User:Kempelen|Kempelen]])
-** [[:Category:Distributions]] - (OK: [[User:Kempelen|Kempelen]])
-** [[:Category:Software (non openmoko)]] - (OK: [[User:Kempelen|Kempelen]])
-
 Applications category contains subcategories for various application groups, like GPS, Networking... This may be a problem if e.g. GPS belongs to Applications and Hardware too (and most of these stuff will belong to both). Maybe we could simply add articles to Applications AND GPS, which won't be subcategories of each other. [[User:Kempelen|Kempelen]] 20:54, 29 August 2008 (UTC)
 
-Basic End User and Advanced End User categories may need to be created instead User, which is not enough specific term. [[User:Kempelen|Kempelen]]
+Basic End User and Advanced End User categories have been created instead User, which was not enough specific term. (And contained only WishList items!) [[User:Kempelen|Kempelen]]
 
 == Navigation templates ==
 
