--- a/Om_2008.8.mw
+++ b/Om_2008.8.mw
@@ -107,6 +107,7 @@ and add <tt>usb*</tt> above <tt>eth*</tt> in <tt>/etc/resolvconf/interface-order
 <code>cd /etc ; rm resolv.conf ; ln -s /etc/resolvconf/run/resolv.conf .</code><br>
 <code>mkdir /lib/resolvconf/ ; cd /lib/resolvconf/</code><br>
 <code><nowiki>wget http://kopparv34.mine.nu/list-records</nowiki></code><br>
+<code>chmod +x list-records</code><br>
 Edit <code>/etc/network/interfaces</code> and remove the lines:<br>
 <code>       network 192.168.0.0</code><br>
 <code>       gateway 192.168.0.200</code><br>
