--- a/A_Filesystem's_Guide.mw
+++ b/A_Filesystem's_Guide.mw
@@ -25,7 +25,7 @@ The Rootfilesystem consists out of the following directories:
 The first difference to the standard linux filesystem is that Openmoko lacks a /root directory.
 This directory is located under /home/root/
 
-Under /home/root/.evolution/ one can find the config and data files for contacts, calender, memos and tasks created on the Freerunner.
+Under /home/root/.evolution/ one can find the config and data files for contacts, calender, memos and tasks created on the FreeRunner.
 
 The file /home/root/.ash_history seems to have a false name; correct would be .bash_history.
 
