--- a/Biking.mw
+++ b/Biking.mw
@@ -20,7 +20,7 @@ The alternative is to steal energy from the crank. You can do this with a hub dy
 === Charging via hub ===
 Connecting a hub ("Nabendynamo" [http://nabendynamo.de/]) like the SON [http://www.peterwhitecycles.com/schmidt.asp] to a self-made or prebuilt charger could supply your device while biking.
 
-The Freerunner has three different [[Forcing_fast_charge_mode|charging modes]]: 100mA, 500mA and 1A. 100mA seems to be too low, as it is said, that the Freerunner draws 100mA current even when it is switched off. A hub dynamo provides 500mA. If you want to use your lights while charging you need to connect the lights in series to the charger. At least the SON will increase the voltage and still delivers the same current. But you need a bypass circuit in case of less current draw of the charger when the battery is full.
+The FreeRunner has three different [[Forcing_fast_charge_mode|charging modes]]: 100mA, 500mA and 1A. 100mA seems to be too low, as it is said, that the FreeRunner draws 100mA current even when it is switched off. A hub dynamo provides 500mA. If you want to use your lights while charging you need to connect the lights in series to the charger. At least the SON will increase the voltage and still delivers the same current. But you need a bypass circuit in case of less current draw of the charger when the battery is full.
 
 ==== pre-built chargers ====
 * Zzing [http://zzing.de/English_Zzing/]
