Replacing 'Freerunner' with 'FreeRunner'

--- a/Booting_the_Neo_FreeRunner_from_SD_via_U-Boot.mw
+++ b/Booting_the_Neo_FreeRunner_from_SD_via_U-Boot.mw
@@ -1,4 +1,4 @@
-This page explains how to boot a Freerunner from the (micro-)SD card rather than from the built-in NAND flash memory. The SD card shares a bus with the GPU, so it may not perform as well, but it is another option.
+This page explains how to boot a FreeRunner from the (micro-)SD card rather than from the built-in NAND flash memory. The SD card shares a bus with the GPU, so it may not perform as well, but it is another option.
 
 {{Warning | Booting from SDHC may cause problems at this time.   }} 
 See [http://thread.gmane.org/gmane.comp.handhelds.openmoko.community/19154/focus=19281| this thread.]
@@ -28,11 +28,11 @@ The command syntax is:
 
 where &lt;p&gt; is the partition number, and &lt;filepath&gt; is the path to the file that is to be loaded.
 
-{{Note| The "ext2load" command is broken on u-boot binary earlier than "20080723", including the one shipped with the first batch of Freerunners, are affected by bug [http://docs.openmoko.org/trac/ticket/799 #799]. If you update your U-Boot and kernel packages you can use direct ext2 / 3 boot all in one partition.}}
+{{Note| The "ext2load" command is broken on u-boot binary earlier than "20080723", including the one shipped with the first batch of FreeRunners, are affected by bug [http://docs.openmoko.org/trac/ticket/799 #799]. If you update your U-Boot and kernel packages you can use direct ext2 / 3 boot all in one partition.}}
 
-{{Warning | Be careful when updating u-boot on a Neo1973 as there is a risk of bricking the device (unless you have a debug board). This is not an issue for the Freerunner as it has a protected copy of u-boot in the NOR flash }}
+{{Warning | Be careful when updating u-boot on a Neo1973 as there is a risk of bricking the device (unless you have a debug board). This is not an issue for the FreeRunner as it has a protected copy of u-boot in the NOR flash }}
 
-{{Note| U-Boot supports SDHC protocol on the Freerunner only: on the Neo1973, u-boot is unable to access SDHC cards (4G or larger). The kernel does have SDHC support on Neo1973, so it is possible to have the root filesystem on SDHC and the kernel on NAND flash to work around it. }}
+{{Note| U-Boot supports SDHC protocol on the FreeRunner only: on the Neo1973, u-boot is unable to access SDHC cards (4G or larger). The kernel does have SDHC support on Neo1973, so it is possible to have the root filesystem on SDHC and the kernel on NAND flash to work around it. }}
 
 === Root Filesystem Parameters ===
 
@@ -178,7 +178,7 @@ Unmount both the rootfs partition and the kernel partition and make sure all rem
 
 == Add uboot boot entry ==
 Depending on the revision of the phone and the partition type (ext2/ext3) you are using, it might be necessary to add an entry to the bootmenu to be able to boot the system off your SD card.
-If you are using a Freerunner and have created an FAT kernel/ext2 rootfs partition you should be able to boot from the card right out of the box, because a boot menu entry for this should already exist in the NOR/NAND boot menu.
+If you are using a FreeRunner and have created an FAT kernel/ext2 rootfs partition you should be able to boot from the card right out of the box, because a boot menu entry for this should already exist in the NOR/NAND boot menu.
 In any other case you should at least make sure the needed entry exists in your menu before proceeding.
 You will need to enter the uboot shell of the NAND boot menu for this. A description on how to connect to the uboot loader shell can be found in this article: [[Uboot#Bootloader_prompt]]. Details on howto get into the NAND boot menu can be found [[Booting#Log_into_U-Boot_in_the_NAND_Flash|here]].
 
@@ -252,7 +252,7 @@ See also [[Moving current system from flash to SD]] which shows how to move the 
 
 === Boot from SDHC ===
 
-{{Note|the following text was written for the Neo1973. SDHC and SD should both work in a Freerunner if you have u-boot from 2008-07-23 or later.}}
+{{Note|the following text was written for the Neo1973. SDHC and SD should both work in a FreeRunner if you have u-boot from 2008-07-23 or later.}}
 
 As SDHC is not supported in older u-boot versions you can't use the Booting from SD guide.
 But there's a kind of workaround that is a good option to have at least your rootfs on the microSDHC:
