Replacing 'Freerunner' with 'FreeRunner'

--- a/Booting_the_Neo_FreeRunner_via_U-Boot.mw
+++ b/Booting_the_Neo_FreeRunner_via_U-Boot.mw
@@ -1,4 +1,4 @@
-The Neo Freerunner contains two FLASH memories: NOR FLASH and NAND FLASH. A boot loader is present in both memories.
+The Neo FreeRunner contains two FLASH memories: NOR FLASH and NAND FLASH. A boot loader is present in both memories.
 
 The normal power up uses the boot loader in NAND FLASH.
 NAND FLASH can be updated (written) using the boot loader and a utility (dfu_util) running on an attached host computer.
