Replacing 'Freerunner' with 'FreeRunner'

--- a/Booting_the_Neo_FreeRunner%2Fru.mw
+++ b/Booting_the_Neo_FreeRunner%2Fru.mw
@@ -1,6 +1,6 @@
 {{Languages|Booting the Neo FreeRunner}}
 
-Neo Freerunner содержит два вида флэш-памяти: NOR FLASH и NAND FLASH. Загрузчик присутствует в них обоих.
+Neo FreeRunner содержит два вида флэш-памяти: NOR FLASH и NAND FLASH. Загрузчик присутствует в них обоих.
 
 При нормальном включении используется загрузчик в NAND FLASH.
 NAND FLASH может быть обновлён (перезаписан) с использованием загрузчика и программы (dfu_util), запущенной на подсоединённом компьютере.
