Replacing 'Freerunner' with 'FreeRunner'

--- a/U-Boot.mw
+++ b/U-Boot.mw
@@ -56,7 +56,7 @@ To build u-boot:
 
 The latest bootloader binary builds can be found under http://buildhost.openmoko.org/daily/ in the subdirectory [device]/200808/[date]/.
 
-All versions of the GTA02 (Neo Freerunner) that have been sold to the public are version 5 hardware so look for a file with "gta02" and "v5" in the name, for example
+All versions of the GTA02 (Neo FreeRunner) that have been sold to the public are version 5 hardware so look for a file with "gta02" and "v5" in the name, for example
 uboot-gta02v5-latest.bin
 
 The file should be written to the NAND flash address 0x00000000 (size 0x30000) (the first [[partition]]).
@@ -338,7 +338,7 @@ It works the following way:
  dfu-util -a u-boot_env -R -U env.in
 * Create a file that contains everything you want to change in your u-boot environment or get it by issuing the following command:
  wget http://svn.openmoko.org/trunk/src/host/devirginator/environment.in
-* Now let devirginator generate a new u-boot_env partition for us, - that contains the partition table from our u-boot_env, - and all changes we wanted to make; Note that the -D GTA02 is needed for the neo Freerunner only, and has to come before the other options.
+* Now let devirginator generate a new u-boot_env partition for us, - that contains the partition table from our u-boot_env, - and all changes we wanted to make; Note that the -D GTA02 is needed for the neo FreeRunner only, and has to come before the other options.
  ./envedit.pl -D GTA02 -i env.in -f environment.in -o env.out
 * On my box the partition layout didn't seem to match the idea of envedit.pl, so it issued 2 warnings:
  warning: environment is 262144 bytes, expected 16384
@@ -444,7 +444,7 @@ Disconnecting the Neo's USB while powering up may prevent this problem in the fu
 
 == Related pages ==
 
-See [[Flashing the Neo 1973]] and [[Flashing the Neo Freerunner]] for instructions on using dfu-util to install a new bootloader in your phone.
+See [[Flashing the Neo 1973]] and [[Flashing the Neo FreeRunner]] for instructions on using dfu-util to install a new bootloader in your phone.
 
 [[Category:System Developers]]
 [[Category:Flashing Openmoko]]
