Replacing 'Freerunner' with 'FreeRunner'

--- a/Building_FSO.mw
+++ b/Building_FSO.mw
@@ -192,7 +192,7 @@ DISTRO = "angstrom-2008.1"
 MACHINE = "om-gta01"
 </nowiki></pre>
 
-For a Freerunner, using an openmoko distro, you'll do that :
+For a FreeRunner, using an openmoko distro, you'll do that :
 
 <pre><nowiki>
 BBFILES = "/stuff/org.openembedded.dev/packages/*/*.bb"
