--- a/CDMA.mw
+++ b/CDMA.mw
@@ -31,7 +31,7 @@ Leave your nickname here if you are interested in a CDMA version.<br>
 # [[User:Swagger|Swagger]] March 1st, 2008 - I'm currently a Sprint customer and I would LOVE a CDMA version of this phone.  The current selection of smart phones is crap.
 # [[User:derekv|derekv]] March 22nd, 08 - Verizon Customer, I get good service with Verizon but their selection of phones is terrible.  At the moment they only have one linux based phone, which is their cdma/gsm "worldphone".  I'm curious to see how this "any device" thing is going to pan out.  It could change everything.  Having not looked at the hardware design, would it be possible for a phone to be configurable for different networks by having hardware modules?  Even if the phone had to be taken apart, it would allow you to switch networks and travel more easily, as well as upgrade, while not having to pay for networks you don't want -- ideally -- perhaps -- maybe --
 # [[User:sarumont|sarumont]] March 24th, 2008 - I'm currently a Sprint customer and I would LOVE a CDMA version of this phone.  My HTC Touch is horrible, but the GSM carriers in the US are worse.
-# [[User:heathhey|heathhey]] April 14th 2008 - I would gladly pay $600 for a cdma freerunner. I am moving to a rural area that is only serviced by CDMA carriers (Verizon, Sprint, Alltel). I'm currently trying to decide which of verizon's terrible phones I want to be saddled with for the next two years, and I would much rather it be the Freerunner. 
+# [[User:heathhey|heathhey]] April 14th 2008 - I would gladly pay $600 for a cdma freerunner. I am moving to a rural area that is only serviced by CDMA carriers (Verizon, Sprint, Alltel). I'm currently trying to decide which of verizon's terrible phones I want to be saddled with for the next two years, and I would much rather it be the FreeRunner. 
 # [[User:wldtazm4|wldtazm4]] April 20th 2008 - I would be so happy if they opened it up for cdma I love verizon, but they don't have any phones that I like. this phone is an awsome phone by the looks of it...free runner all the way!
 # [[User:5m0k3|5m0k3]] May 11th 2008 - Alltel
 # [[User:picosrfr|Will]] June 3rd 2008 - Telus Mobility.  Most of Canada is now using CDMA (EVDO) for it's phone networks and this functionality would be very beneficial for me.  The area I live in only has CDMA networks.
@@ -40,5 +40,5 @@ Leave your nickname here if you are interested in a CDMA version.<br>
 # [[User:Mjpatey|Mjpatey]] 23:39, 13 July 2008 (UTC) - Very interested!  I think you'll find that, though Verizon is very closed and proprietary, they have a lot of customers.  To ignore them on an ideological basis seems self-defeating.
 [[Category:Hardware ideas]]
 # [[User:BillMcGonigle|Bill McGonigle]] 2008-07-15 - In the US, with Verizon at least, if you want to change phones, you call a toll-free number and give the operator the ESN.  That's it.  I'm not sure that's such a terrible affront to freedom, despite being a minor inconvenience.  The phone itself can do anything - both Windows Mobile and PalmOS phone are available that are completely unrestricted.  Due to poor penetration of 3GPP in the US, not supporting CDMA probably reduces the addressable market by about 40%.  LTE will start to ease this in perhaps four years.  Until then, lots of folks won't be hacking on Openmoko who otherwise could be.
-# [[User:clovis|clovis]] - 8/10/2008 - Where I live in the states T-Mobile is not available, and the only other (major) GSM carrier we have here is AT&T, and I can't in good conscience give my money to them, what with the constant invasion of privacy and all. So I'm stuck. Otherwise I'd buy a Freerunner today. A CDMA Openmoko phone would be quite welcome.
+# [[User:clovis|clovis]] - 8/10/2008 - Where I live in the states T-Mobile is not available, and the only other (major) GSM carrier we have here is AT&T, and I can't in good conscience give my money to them, what with the constant invasion of privacy and all. So I'm stuck. Otherwise I'd buy a FreeRunner today. A CDMA Openmoko phone would be quite welcome.
 # [[User:Radar|Radar]] - 8/29/2008 - On Verizon.  It's time for me to update phones, and I'd love to have a CDMA OpenMoko phone.
