Replacing 'Freerunner' with 'FreeRunner'

--- a/Carriers%2FATT.mw
+++ b/Carriers%2FATT.mw
@@ -10,7 +10,7 @@ Below are two tables to help users report their success or failure. If your card
 {| class="wikitable sortable" style="margin: 0em " cellspacing="0" cellpadding="3" border="1"
 !5 Digit SKU  !! Manufacturer Code !! 4 digit Vendor/Version !! Badge !! Notes
 |-
-| 63510 || G || 3001 || 64k smartchip || On Freerunner: +CME ERROR: 10 for AT+CFUN=`, +CME Error 13 for AT+CIMI, and EVENT: Netreg searching for network 
+| 63510 || G || 3001 || 64k smartchip || On FreeRunner: +CME ERROR: 10 for AT+CFUN=`, +CME Error 13 for AT+CIMI, and EVENT: Netreg searching for network 
 EVENT: Netreg registration denied 
 cme error: 32
 RSTR=`+CME ERROR: 32'
@@ -65,7 +65,7 @@ for AT+COPS
 |-
 | 71234 || G  ||  3022 || blazing 3G fireball || registers, sends/receives calls with FreeRunner right out of the box. 
 |-
-| 71234 || G || 3022 || blazing 3G fireball ||  $15 ($30 with $15 instant rebates) GoPhone kit at RadioShack.  Pulled the sim out of the kit phone when I got home, stuck it in my Freerunner, and it worked.  SMS doesn't seem to be working though (nothing shows up in the messages app).
+| 71234 || G || 3022 || blazing 3G fireball ||  $15 ($30 with $15 instant rebates) GoPhone kit at RadioShack.  Pulled the sim out of the kit phone when I got home, stuck it in my FreeRunner, and it worked.  SMS doesn't seem to be working though (nothing shows up in the messages app).
 |-
 | 71234 || O || 4022 || blazing 3G fireball || WalMart/RadioShack $18 Cingular Go phone package. This chip was also given with a contract plan. (Three confirmed working.)[17 July 08 confirmed 4th working w/Family 500 anytime]
 |-
@@ -79,7 +79,7 @@ for AT+COPS
 |-
 | 73000 || O || 4021 || blazing 3G fireball || tried it using libgsm-tool -m shell (O, R). Just have to wait for 30-40 sec after registering. Then you can make calls consistently.
 |-
-| 73000 || G || 3021 || blazing 3G fireball || Works with Freerunner, but placement of SIM is the key. Shifted it slightly down and it registers reliably
+| 73000 || G || 3021 || blazing 3G fireball || Works with FreeRunner, but placement of SIM is the key. Shifted it slightly down and it registers reliably
 |}
 
 Vendor Codes:
