Replacing 'Freerunner' with 'FreeRunner'

--- a/Community_Member_of_the_Week.mw
+++ b/Community_Member_of_the_Week.mw
@@ -19,7 +19,7 @@ guide, etc."
 ! Nominee !! Reason !! Votes
 |-
 | [[User:Kevin_Dean|Kevin]]
-| Kevin writes the (almost) daily [[Snapshot_review|Snapshot review]] and reports on the progress and problems of the current software. Since I'm not an owner of a GTA01, I can't test the software by myself. Therefore any information about Openmoko makes the waiting for the Freerunner less bitter.  I'm reading the different mailing lists very carefully and come to know of solved bugs and new features. However, Kevin gives with his reviews an impression of the software from a users point of view. And when the Freerunner is released, I hope Kevin will continue with his reviews so I always know what snapshot is safe to use.
+| Kevin writes the (almost) daily [[Snapshot_review|Snapshot review]] and reports on the progress and problems of the current software. Since I'm not an owner of a GTA01, I can't test the software by myself. Therefore any information about Openmoko makes the waiting for the FreeRunner less bitter.  I'm reading the different mailing lists very carefully and come to know of solved bugs and new features. However, Kevin gives with his reviews an impression of the software from a users point of view. And when the FreeRunner is released, I hope Kevin will continue with his reviews so I always know what snapshot is safe to use.
 |[[USER:Avanc|Avanc]];
 [[User:Treviño|Treviño]];
 [[User:Iandouglas|Iandouglas]];
