--- a/Community_Updates.mw
+++ b/Community_Updates.mw
@@ -3,7 +3,7 @@
 Even though Openmoko strives to keep the community informed of the development progress, Openmoko does not provide delivery dates. Instead, Openmoko reports the project status here and on the [http://lists.openmoko.org/pipermail/community/ openmoko-community mailing list]. Major updates are also sent to the [http://lists.openmoko.org/pipermail/announce/ announce mailing list].
 Developers will wish to follow the progress on the [http://lists.openmoko.org/pipermail/openmoko-kernel/ openmoko-kernel mailing list] and the [http://lists.openmoko.org/pipermail/devel/ devel mailing list].
 
-You may also wish to take a look at the [http://wiki.openmoko.org/wiki/Neo_FreeRunner_(GTA02)_FAQ Neo Freerunner FAQ].
+You may also wish to take a look at the [http://wiki.openmoko.org/wiki/Neo_FreeRunner_(GTA02)_FAQ Neo FreeRunner FAQ].
 
 
 ==Previous Community Updates==
