--- a/Debian.mw
+++ b/Debian.mw
@@ -9,7 +9,7 @@ Previous information (partly outdated, now) on how to install Debian manually ha
 The default root password is blank.  You should change that as soon as you can.
 
 == Speeding up booting ==
-What's good for every linux booting is also good for our debian on the freerunner: booting in quiet mode. To do so by default just boot your Neo Freerunner in NOR-Flash and execute this configure-script: [http://paste.ubuntuusers.de/391456/ configure-uboot.sh].
+What's good for every linux booting is also good for our debian on the freerunner: booting in quiet mode. To do so by default just boot your Neo FreeRunner in NOR-Flash and execute this configure-script: [http://paste.ubuntuusers.de/391456/ configure-uboot.sh].
 
 It changes default booting to quiet-mode and adds another boot-option to boot without quiet-mode for debugging purpose.
 == Suspend ==
@@ -83,7 +83,7 @@ Issues:
 
 == Bluetooth ==
 
-The Freerunner uses the standard Linux bluez stack, installed with
+The FreeRunner uses the standard Linux bluez stack, installed with
  # apt-get install bluez-utils
 
 There is also a module missing from /etc/modules, which is critical to getting your device recognized. (kudos to johnsu01 on irc.freenode.net:#openmoko-debian for the find)
@@ -92,7 +92,7 @@ There is also a module missing from /etc/modules, which is critical to getting y
 The first time you try this, you can also
  # modprobe ohci-hcd
 
-The only atypical part of using bluetooth on the Freerunner is turning it on, which can be done with
+The only atypical part of using bluetooth on the FreeRunner is turning it on, which can be done with
  # echo 1 > /sys/bus/platform/devices/neo1973-pm-bt.0/power_on
  # echo 0 > /sys/bus/platform/devices/neo1973-pm-bt.0/reset
 
@@ -105,7 +105,7 @@ Then the device should be visible using
 
 == XFCE ==
 
-xfce is small and lightweight and so quite fast for the Freerunner.
+xfce is small and lightweight and so quite fast for the FreeRunner.
 
  apt-get install xfce4
  cp /etc/init.d/zhone-session /etc/init.d/xfce
