--- a/Debug_Board_v3.mw
+++ b/Debug_Board_v3.mw
@@ -165,7 +165,7 @@ Please use the driver from http://people.openmoko.org/laforge/misc/debug_board_v
 
 * [[Connecting Neo1973 with Debug Board v2]] (shows how to connect the FPC)
 
-The recommended connection sequence given in [[Debug Board v2#Hardware connection]] may not work for debug board v3 and the Freerunner. It seems impossible to turn on the Freerunner after plugging the Freerunner USB cable into the PC, but before plugging the debug board USB cable into the PC. After the debug board is powered by the PC, the Freerunner should start.
+The recommended connection sequence given in [[Debug Board v2#Hardware connection]] may not work for debug board v3 and the FreeRunner. It seems impossible to turn on the FreeRunner after plugging the FreeRunner USB cable into the PC, but before plugging the debug board USB cable into the PC. After the debug board is powered by the PC, the FreeRunner should start.
 
 === Actually using it ===
 
