Replacing 'Freerunner' with 'FreeRunner'

--- a/Distributions.mw
+++ b/Distributions.mw
@@ -50,7 +50,7 @@ Om 2008.8 is maintained as "'''ASU-stable'''" with continuous updates.
 * Availabilty: [http://buildhost.openmoko.org/daily/ Official Buildhost] and [[MokoMakefile]] support for development builds
 * [[Downloads#Openmoko_2007.2_images_.28GTK.29|Download]]
 * Several videos of this stack by [http://uk.youtube.com/user/freeyourphone Youtube user freeyourphone] and [http://uk.youtube.com/watch?v=U05kZfURPig&NR=1 video review by BVB Tech]
-This is the base-system which is installed on Freerunner when it leaves the factory.
+This is the base-system which is installed on FreeRunner when it leaves the factory.
 
 2007.2 development driven by openmoko inc. has basically stopped and resources are allocated in favor of 2008.8, while the community currently does the effort to 'rescue' the 2007.2 telephony apps and pull them to the future middleware from FSO (see SHR).
 thus patches are still welcome, especially if they help development of SHR.
