Replacing 'Freerunner' with 'FreeRunner'

--- a/Download.mw
+++ b/Download.mw
@@ -58,7 +58,7 @@ Reference: See [http://lists.openmoko.org/pipermail/community/2008-August/027997
 ==== Neo FreeRunner ====
 
 Latest stable Om 2007.2 release:
-http://buildhost.openmoko.org/releases/Freerunner/
+http://buildhost.openmoko.org/releases/FreeRunner/
 
 Daily builds: http://buildhost.openmoko.org/daily/freerunner/ 
 
@@ -110,8 +110,8 @@ Images are available on the [http://www.qtopia.net/modules/mydownloads/index.php
 
 ==== Neo FreeRunner ====
 
-* Find "Qtopia flash image for FIC Neo Freerunner (gta02)" on [http://www.qtopia.net/modules/mydownloads/index.php Qtopia.net images] (a tarball with both a rootfs and kernel)
-* The "Developer root filesystem for FIC Neo Freerunner (gta02)" file is a  barebones root filesystem created from the 'FSO' image available from Openmoko.
+* Find "Qtopia flash image for FIC Neo FreeRunner (gta02)" on [http://www.qtopia.net/modules/mydownloads/index.php Qtopia.net images] (a tarball with both a rootfs and kernel)
+* The "Developer root filesystem for FIC Neo FreeRunner (gta02)" file is a  barebones root filesystem created from the 'FSO' image available from Openmoko.
 
 ==== Neo 1973 ====
 
